--- a/config.toml
+++ b/config.toml
@@ -30,10 +30,10 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     # Assign a weight to define the order
     
     # prepended links
-    #[[menu.prepend]]
-    #  url = "http://gohugo.io"
-    #  name = "Hugo"
-    #  weight = 10
+#    [[menu.prepend]]
+#      url = "http://gohugo.io"
+#      name = "Hugo"
+#      weight = 10
 
     # postpended links
     #[[menu.postpend]]
@@ -45,7 +45,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
   
   # Hero section
   [params.hero]
-    title = '<br><br>Co-Regulation (CORE) Lab.'
+    title = "Co-Regulation (CORE) Lab."
     subtitle = 'We study co-regulation in romantic relationships. We study social thermoregulation. We rely on open science ideals. We collaborate with researchers around the world, but are located at the <a href="https://www.univ-grenoble-alpes.fr">Université Grenoble Alpes</a>.'
  
   # Intro section
