--- a/config.toml
+++ b/config.toml
@@ -79,7 +79,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
   [params.intro.news] #did some heavy editing of params/intro.html to add this section
     enable = true
     title = "Announcements"
-    description = "&bull; Justin Mah (University of Alberta) will be joining the lab as intern in May<br>&bull; Last submitted manuscript that we participated in was for the Psych Science Accelerator: https://psyarxiv.com/785qu/<br>&bull; Armel Soubeiga (Université Grenoble Alpes) will be joining the lab as an intern in May<br>&bull; Nazanin Kafaee (Western Ontario University) will be joining the lab as intern in 2019!"
+    description = '&bull;The CORE Lab will organize a <a href="http://www.easp.eu/news/itm/rkts_workshop__solid_science_training_workshop-646.html">solid science training workshop</a>, together with the University of Bordeaux<br>&bull; Justin Mah (University of Alberta) will be joining the lab as intern in May<br>&bull; <a href="https://psyarxiv.com/785qu/">Last submitted manuscript</a> that we participated in was for the Psych Science Accelerator<br>&bull; Armel Soubeiga (Université Grenoble Alpes) will be joining the lab as an intern in May<br>&bull; Nazanin Kafaee (Western Ontario University) will be joining the lab as intern in 2019!'
 
 # Above description is less tidy than the rest because I hacked it in to the intro. Will try to tidy it later.
 
