--- a/config.toml
+++ b/config.toml
@@ -77,7 +77,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     img = "doors.jpg"
 
   [params.intro.news] #did some heavy editing of params/intro.html to add this section
-    enable = true
+    enable = false
     title = "Announcements"
     description = '&bull; Find slides and presentations from our recent Open Science workshop in Bordeaux <a href="https://osf.io/gvkxn/">here</a>.<br>&bull; We sent off three members of the lab who have completed very successful internships: Justin, Armel, and Mehdi. <br>&bull; Hans IJzerman has signed a contract with <a href="https://en.wikipedia.org/wiki/W._W._Norton_%26_Company">WW Norton</a> to write a popular science book on thermoregulation in social relationships<br>&bull; <a href="https://psyarxiv.com/785qu/">Last submitted manuscript</a> was for the Psych Science Accelerator'
     
@@ -93,8 +93,8 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
   # Work section
   [params.work]
     enable = true
-    title = "Projects"
-    description = "Here's a sample of the work we do."
+    title = "Releases"
+    description = "Here are recent projects we've completed."
     footertext = ''
 
     [[params.work.row]]
@@ -149,6 +149,54 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
       title = "Replication Attachment-Social Value Orientation"
       subtitle = "One of our researchers conducted a (failed) replication of a famous finding in the literature (showing a relation between attachment security and Social Value Orientation)."
       url = "https://psyarxiv.com/d2eqk/"
+
+  # About section
+  # Edited about.html to fix display issues when adding 6+ collaborators
+  [params.about]
+    enable = true
+    title = "Lab Members"
+    footertext = '<big>Former members:</big> <a href="https://osf.io/n75jp/">Lison Neyroud</a>, <a href="http://armelsoubeiga.ga/">Armel Soubeiga</a>, Justin Mah, <a href="https://github.com/souabniMehdi">Mehdi Souabni</a>.'
+#    description = ""
+
+  [[params.about.item]]
+    name = '<a href="http://www.hansijzerman.org/">Hans IJzerman</a>'  
+    position = 'Principal Investigator'  
+    description = "PhD in Social Psychology from Utrecht University and Associate Professor at UGA. Directs lab strategy."  
+    img = "hans_twitter.jpeg"  
+    alt = "Person1"  
+    social = [
+      ["icon-globe", "http://www.hansijzerman.org/"],
+      ["icon-folder", "https://osf.io/3hsfj/"],
+      ["icon-google", "https://scholar.google.com/citations?user=KC7FG9QAAAAJ"],        
+      ["icon-twitter", "https://twitter.com/hansijzerman"]
+    ]  
+
+  [[params.about.item]]
+    name = '<a href="https://raklein.me/">Richard Klein</a>'
+    position = "Postdoc"
+    description = "PhD in Social Psychology from the University of Florida. Handles complex datasets and performs statistical analyses."
+    img = "klein.cos.photo.jpg"
+    alt = "RichardKlein"
+    social = [
+      ["icon-globe", "https://raklein.me/"],
+      ["icon-folder", "https://osf.io/tmwry/"],
+      ["icon-google", "https://scholar.google.com/citations?user=wxW6e0sAAAAJ"],
+      ["icon-twitter", "https://twitter.com/raklein3"],
+      ["icon-github", "https://github.com/raklein"]
+    ]     
+    
+# Below used to bug out after 5 people, I think I fixed it in about.html though
+    [[params.about.item]]
+      name = '<a href="https://www.researchgate.net/profile/Elisa_Sarda">Elisa Sarda</a>'
+      position = "Postdoc"
+      description = "PhD in Psychology from UGA. Manages participant recruitment, translations, and keeps the lab running."
+      img = "elisa.png"
+      alt = "elisa"
+      social = [
+        ["icon-globe", "https://www.researchgate.net/profile/Elisa_Sarda"],
+        ["icon-folder", "https://osf.io/t5h3s/"]
+      ]
+
 
   # Testimonials section
   # I edited partials/testimonials.html to remove the quotes and change this to a friends-of-lab section.
@@ -227,7 +275,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
       
 # I shortened the description for in-mind -- longer descriptions seem to mess up the formatting in this section      
       [[params.testimonials.item]] 
-      person = '<a href="http://www.in-mind.org">In-Mind Foundation</a><br>Hans founded this magazine'
+      person = '<a href="http://www.in-mind.org">In-Mind Foundation</a><br>Popular Psychology Journal'
       img = "inmind.png"
       alt = "inmind"
       
@@ -251,8 +299,8 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
       img = "tops.jpeg"
       alt = "tops"
       
-    [[params.testimonials.item]] #Layout doesn't like the second line of affiliiations, so Brian has to come last.
-      person = '<a href="https://www.projectimplicit.net/nosek/">Brian Nosek</a><br>University of Virginia<br>Center for Open Science'
+    [[params.testimonials.item]] 
+      person = '<a href="https://www.projectimplicit.net/nosek/">Brian Nosek</a><br>Center for Open Science'
       img = "nosek.jpeg"
       alt = "nosek"
 
@@ -322,82 +370,6 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
       title = '<a href = "https://grants.nih.gov/grants/guide/pa-files/PAR-13-146.html">National Cancer Institute Exploratory Grant</a>'
       description = "In our papers, we have written about links between cancer and thermoregulation. There are good reasons to suppose a link. This grant could support such research."
       icon = "icon-graduation"
-
-  # About section
-  # Edited about.html to fix display issues when adding 6+ collaborators
-  [params.about]
-    enable = true
-    title = "Lab Members"
-#    description = ""
-
-  [[params.about.item]]
-    name = '<a href="http://www.hansijzerman.org/">Hans IJzerman</a>'  
-    position = 'Principal Investigator'  
-    description = "PhD in Social Psychology from Utrecht University and Associate Professor at UGA. Directs lab strategy."  
-    img = "hans_twitter.jpeg"  
-    alt = "Person1"  
-    social = [
-      ["icon-globe", "http://www.hansijzerman.org/"],
-      ["icon-folder", "https://osf.io/3hsfj/"],
-      ["icon-google", "https://scholar.google.com/citations?user=KC7FG9QAAAAJ"],        
-      ["icon-twitter", "https://twitter.com/hansijzerman"]
-    ]  
-
-  [[params.about.item]]
-    name = '<a href="https://raklein.me/">Richard Klein</a>'
-    position = "Postdoc"
-    description = "PhD in Social Psychology from the University of Florida. Handles complex datasets and performs statistical analyses."
-    img = "klein.cos.photo.jpg"
-    alt = "RichardKlein"
-    social = [
-      ["icon-globe", "https://raklein.me/"],
-      ["icon-folder", "https://osf.io/tmwry/"],
-      ["icon-google", "https://scholar.google.com/citations?user=wxW6e0sAAAAJ"],
-      ["icon-twitter", "https://twitter.com/raklein3"],
-      ["icon-github", "https://github.com/raklein"]
-    ]     
-# With the below item, format appears to depend on the length of the description
-# If you add more than 5 people. May be a bug in the overall template.
-    [[params.about.item]]
-      name = "Lison Neyroud"
-      position = "Research Manager"
-      description = "MA in Psychology from the UGA. Manages participant recruitment, translations, and keeps the lab running."
-      img = "person3.jpg"
-      alt = "lison"
-      social = [
-        ["icon-folder", "https://osf.io/n75jp/"]
-      ]
-
-  [[params.about.item]]
-    name = '<a href="http://armelsoubeiga.ga/">Armel Soubeiga</a>'
-    position = "Intern"  
-    description = "Master's student in statistics and data science at UGA. Joins the lab to work on big data and deep/machine learning."
-    img = "armel.jpg"  
-    alt = "armel"  
-    social = [
-      ["icon-globe", "http://armelsoubeiga.ga/"],
-      ["icon-github", "https://github.com/armelsoubeiga"]
-    ]    
-
-  [[params.about.item]]
-    name = "Justin Mah"  
-    position = "Intern"  
-    description = 'Undergraduate student in Psychology at the University of Alberta, Canada. Joins the lab to do studies using the <a href="https://embrlabs.com/">Embr wave</a>.'
-    img = "justin.png"  
-    alt = "justin"  
-    social = [
-      ["icon-github", "http://"]
-    ]   
-
-  [[params.about.item]]
-    name = "Mehdi Souabni"
-    position = "Intern"  
-    description = "Master's student in Info Systems at UGA. Does Android development for our temperature/experience sampling app."
-    img = "mehdi.jpg"  
-    alt = "mehdi"  
-    social = [
-      ["icon-github", "https://github.com/souabniMehdi"]
-    ]   
 
   # Counters section
   [params.counters]
