--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
   [params.navigation]
     brand = "CORE Lab"
     home = "Home"
-    work = "Projects"
+    work = "Releases"
     testimonials = "Lab Friends" # I commented out this tab in partials/nav.html so it isn't displayed
     services = "Opportunities"
     about = "Lab Members" #Order of this one changed in layouts/partials/nav.html 
@@ -91,64 +91,66 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
 
   # Work section
+# To enable external URLs here, I had to edit layouts/partials/work.html.
+# Line 16 from: <a href="images/{{ .img }}" class="fh5co-project-item image-popup to-animate">
+# to: <a href="{{ .url }}" class="fh5co-project-item to-animate">
+# Also edited work.html to add the 'category' images. Can add new ones or change current
+# just edit with Gimp releases_categories.xcf (in images folder) and save as "name.png".
+# Can remove entirely by deleting this line from work.html: <img src="images/{{ .category }}" class="img-responsive">
+
   [params.work]
     enable = true
     title = "Releases"
     description = "Here are recent projects we've completed."
-    footertext = ''
+    footertext = "We're working on a page for achived projects. We'll link those here when it's ready."
 
     [[params.work.row]]
+      category = "education.png"
+      img = "bord_workshop.png"
+      alt = "Solid Science"
+      title = "Solid Science Training Workshop"
+      subtitle = "9/2018 - We organized a workshop training scientists on doing reproducible, open science. Videos and materials available on the OSF."
+      url = "https://osf.io/gvkxn/" 
+
+    [[params.work.row]]
+      category = "publication.png"
       img = "penguins-429128_1920.jpg"
       alt = "Penguins Image"
       title = "Human Penguin Project"
-      subtitle = "International collaboration investigating the link between social environment and core body temperature."
-      url = "https://osf.io/2rm5b/" 
-
-# To enable external URLs here, I had to edit layouts/partials/work.html.
-# Line 16 from: <a href="images/{{ .img }}" class="fh5co-project-item image-popup to-animate">
-# to: <a href="{{ .url }}" class="fh5co-project-item to-animate">
+      subtitle = "9/2018 - International collaboration investigating the link between social environment and core body temperature."
+      url = "https://psyarxiv.com/6b7ne" 
 
     [[params.work.row]]
+      category = "publication.png"
       img = "cup-939479_1920.jpg"
       alt = "Cold Glass Image"
       title = "Socially Thermoregulated Thinking"
-      subtitle = "Past experiences, and a current manipulation of physical temperature, affect thinking about our loved ones."
+      subtitle = "8/2018 - Past experiences, and a current manipulation of physical temperature, affect thinking about our loved ones."
       url = "https://psyarxiv.com/25dmj"
 
-    [[params.work.row]]
-      img = "stroopml.png"
-      alt = "Stroop figure"
-      title = "Machine Learning and the Stroop Effect"
-      subtitle = "Revisiting what predicts performance on a classic effect using new statistics (conditional random forests)."
-      url = "https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2805205"
-
-    [[params.work.row]]
-      img = "ml1.png"
-      alt = "Many Labs 1 figure"
-      title = "Many Labs 1"
-      subtitle = "36 labs replicated 13 classic psychology studies to investigate cultural and contextual predictors of replicability."
-      url = "https://osf.io/wx7ck/"
-      
-    [[params.work.row]]
-      img = "transparency.jpg"
-      alt = "Transparency Image"
-      title = "Transparency Guide"
-      subtitle = "One of our researchers participated in a collaboration to write a practical guide for more transparent science."
-      url = "https://psyarxiv.com/rtygm"
-      
       [[params.work.row]]
+      category = "publication.png"
       img = "oxford.jpg"
       alt = "Oxford Image"
       title = "Oxford Bibliography Guide"
-      subtitle = "Two of our researchers participated in a collaboration to write an Oxford Bibliography on replication initiatives in psychology."
+      subtitle = "5/2018 - Two of our researchers participated in a collaboration to write an Oxford Bibliography on replication initiatives in psychology."
       url = "https://psyarxiv.com/h5jm7/"
       
-      [[params.work.row]]
-      img = "SVO.jpg"
-      alt = "SVO Image"
-      title = "Replication Attachment-Social Value Orientation"
-      subtitle = "One of our researchers conducted a (failed) replication of a famous finding in the literature (showing a relation between attachment security and Social Value Orientation)."
-      url = "https://psyarxiv.com/d2eqk/"
+    [[params.work.row]]
+      category = "publication.png"
+      img = "transparency.jpg"
+      alt = "Transparency Image"
+      title = "Transparency Guide"
+      subtitle = "6/2018 - One of our researchers participated in a collaboration to write a practical guide for more transparent science."
+      url = "https://psyarxiv.com/rtygm"
+      
+    [[params.work.row]]
+      category = "publication.png"
+      img = "stroopml.png"
+      alt = "Stroop figure"
+      title = "Machine Learning and the Stroop Effect"
+      subtitle = "5/2017 - Revisiting what predicts performance on a classic effect using new statistics (conditional random forests)."
+      url = "https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2805205"
 
   # About section
   # Edited about.html to fix display issues when adding 6+ collaborators
@@ -318,7 +320,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
     [[params.services.item]]
       title = '<a href = "https://ec.europa.eu/research/mariecurieactions/actions/get-funding_en">Postdoc Grant - Marie Curie</a>'
-      description = "The Marie Curie grant is an excellent opportunity for scholars outside of France wanting to come to France. Topic is flexible. Deadline for this call is September 12, 2018"
+      description = "The Marie Curie grant is an excellent opportunity for scholars outside of France wanting to come to France. Topic is flexible and various grants are available."
       icon = "icon-graduation"
 
       [[params.services.item]]
