Added google maps api key, renabled map

--- a/config.toml
+++ b/config.toml
@@ -414,7 +414,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
   # Contact section
   [params.contact]
     enable = true
-    map = false
+    map = true
     form = true
     title = "Get in touch"
     description = "If you're interested in a position in the lab, contact us! You can work on co-regulation or social thermoregulation in combination with your own topic (e.g., computational modelling, motivation, et cetera). In your contact request, please include why you are interested in working on concepts related to thermoregulation/co-regulation. Please also include: </li><li>Which opportunity (e.g., grant) you're interested in.</li><li>Current academic/professional status.</li><li>A brief statement about your commitment to open science.</li>"
@@ -442,3 +442,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 #        ["icon-facebook", "#facebook"],
 #        ["icon-youtube", "#youtube"]
 #      ]
+
+# Note: to enable the map you may need to insert your own API key into layouts/partials/js.html
+# Currently we're using Rick's API key
+# To replace see https://github.com/saey55/hugo-elate-theme/issues/37#issuecomment-428863867
